--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                                     <td ><label class="labelEstandar">Estatus</label><br>
                                         <select class="inputEstandar-id"  name="estatus" id="2m" required>
                                             <option value="">...</option>
+                                            <option value="-Activo">-Activo</option>
                                             <option value="Activo">Activo</option>
                                             <option value="Activo / Falta de documentos">Activo / Falta de documentos</option>
                                             <option value="No Activo / Baja">No Activo / Baja</option>
