--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
                                         <select class="inputEstandar-id"  name="estatus" id="2m" required>
                                             <option value="">...</option>
                                             <option value="-Activo">-Activo</option>
+                                            <option value="-Activo / Falta de documentos">-Activo / Falta de documentos</option>
+                                            <option value="-No Activo / Baja">-No Activo / Baja</option>
+                                            <option value="-Extraviado">-Extraviado</option>
                                             <option value="Activo">Activo</option>
                                             <option value="Activo / Falta de documentos">Activo / Falta de documentos</option>
                                             <option value="No Activo / Baja">No Activo / Baja</option>
