--- a/index.html
+++ b/index.html
@@ -409,6 +409,10 @@ document.getElementById("idGage").addEventListener("change",function(e){
                         numdiv.setAttribute ( "class", "_Bloqueado" );//<----<-<-<-<
                         numdiv.setAttribute("onclick","IdShow(this);");
                         break;
+                    case '-Extraviado':
+                        numdiv.setAttribute ( "class", "_Extraviado" );//<----<-<-<-<
+                        numdiv.setAttribute("onclick","IdShow(this);");
+                        break;
                     case 'Activo':
                         numdiv.setAttribute ( "class", "numero" );
                         numdiv.setAttribute("onclick","IdShow(this);"); 
