--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@ document.getElementById("idGage").addEventListener("change",function(e){
                     case '-Activo / Falta de documentos':
                         numdiv.setAttribute ( "class", "_Pendiente" );
                         numdiv.setAttribute("onclick","IdShow(this);");
+                        break;
                     case '-No Activo / Baja':
                         numdiv.setAttribute ( "class", "_NoActivo" );//<----<-<-<-<
                         numdiv.setAttribute("onclick","IdShow(this);");                   
